--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>ExoticReport - اگزوتیک ریپورت سامانه ثبت نمرات</title>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="text/javascript" src="Engine/TranslateByIP.js"></script>
 </head>
 <body>
 
